--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/action_refresh"
+        android:orderInCategory="100"
+        android:title="@string/action_refresh"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/action_sortBy"
         android:orderInCategory="100"
@@ -10,16 +17,16 @@
     <item
         android:id="@+id/view"
         android:orderInCategory="100"
-        android:title="View"
+        android:title="@string/view"
         app:showAsAction="never">
     <menu xmlns:android="http://schemas.android.com/apk/res/android">
-        <item android:title="One column"
+        <item android:title="@string/one_column"
               android:id="@+id/one_column" />
-        <item android:title="Two columns"
+        <item android:title="@string/two_columns"
               android:id="@+id/two_columns" />
-        <item android:title="Three columns"
+        <item android:title="@string/three_columns"
               android:id="@+id/three_columns" />
-        <item android:title="Four columns"
+        <item android:title="@string/four_columns"
               android:id="@+id/four_columns" />
     </menu>
     </item>
