--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="colorAccentDark">#303f9f</color>
     <color name="otherDays">#e0e0e0</color>
     <color name="textTransparent">#BB424242</color>
+    <color name="whiteTransparent">#E0FFFFFF</color>
+    <color name="detailMovieText">#212121</color>
+
 </resources>
