--- a/app/src/main/res/drawable/layer_list_heart_selected.xml
+++ b/app/src/main/res/drawable/layer_list_heart_selected.xml
@@ -7,10 +7,10 @@
         </shape>
     </item>
     <item
-        android:left="16dp">
+        android:left="19dp">
         <bitmap
             android:gravity="start|center_vertical"
-            android:src="@drawable/ic_star"
+            android:src="@drawable/ic_favorite"
             android:tint="@color/colorAccentDark"/>
     </item>
 
