--- a/app/src/main/res/layout/dialog_settings.xml
+++ b/app/src/main/res/layout/dialog_settings.xml
@@ -6,6 +6,19 @@
               android:orientation="vertical">
 
     <TextView
+        android:id="@+id/favorite"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/selector_favorite"
+        android:paddingBottom="16dp"
+        android:paddingEnd="64dp"
+        android:paddingStart="64dp"
+        android:paddingTop="16dp"
+        android:text="@string/favorite"
+        android:textColor="@drawable/selector_text"
+        android:textSize="16sp"/>
+
+    <TextView
         android:id="@+id/mostPopular"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,4 +43,5 @@
         android:text="@string/highest_rated"
         android:textColor="@drawable/selector_text"
         android:textSize="16sp"/>
+
 </LinearLayout>
