--- a/app/src/main/res/layout/menu_bottom.xml
+++ b/app/src/main/res/layout/menu_bottom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/activity_settings"
-          android:name="com.android.popularmovies.SettingsFragment"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"/>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:id="@+id/bottomSheetFrame"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"/>
