--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         <!--android:layout_height="match_parent"/>-->
 
     <FrameLayout
-        android:id="@+id/gridViewMain"
+        android:id="@+id/gridViewFrame"
         android:layout_weight="1"
         android:layout_width="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
