--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,7 +6,7 @@
               android:layout_height="match_parent"
               android:baselineAligned="false"
               android:orientation="horizontal"
-              tools:context="com.android.popularmovies.MainActivity">
+              tools:context="com.android.popularmovies.activities.MainActivity">
 
 
     <FrameLayout
