--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="@color/colorAccent"
-    tools:context="com.android.popularmovies.MovieDetailActivity"
+    tools:context="com.android.popularmovies.activities.MovieDetailActivity"
     tools:ignore="MergeRootFrame">
 
     <android.support.design.widget.AppBarLayout
@@ -53,7 +53,13 @@
         android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <include layout="@layout/include_movie_detail"/>
+        <FrameLayout
+            android:id="@+id/detailsViewFrame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:background="@color/colorPrimary"
+            android:scaleType="centerInside"/>
 
     </android.support.v4.widget.NestedScrollView>
 
