--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="shapeColor">#000000</color>
     <color name="fab">#F2E676</color>
     <color name="redFavorite">#e57373</color>
+    <color name="lightGrey">#e0e0e0</color>
 
 </resources>
