--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -2,112 +2,43 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:background="@color/colorAccent"
-    tools:context="com.android.popularmovies.activities.MovieDetailActivity"
-    tools:ignore="MergeRootFrame">
+    android:background="@color/colorWhite"
+    android:orientation="vertical">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="-16dp"
-        android:background="@color/colorPrimaryDark"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    <include
+        layout="@layout/tool_bar"/>
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsingToolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            >
-
-            <ImageView
-                android:id="@+id/toolbarImage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="fitXY"
-                app:layout_collapseMode="parallax"/>
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_marginStart="16dp"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-            </android.support.v7.widget.Toolbar>
-        </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/nestedScrollView"
+    <FrameLayout
+        android:id="@+id/detailsViewFrame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="-16dp"
-        android:fillViewport="true"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <FrameLayout
-            android:id="@+id/detailsViewFrame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:background="@color/colorPrimary"
-            android:scaleType="centerInside"/>
-
-    </android.support.v4.widget.NestedScrollView>
+        android:layout_weight="1"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
     <LinearLayout
-        android:id="@+id/fab"
-        android:onClick="addFavorite"
+        android:id="@+id/fabBottomBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        app:layout_anchorGravity="bottom|end"
-        app:layout_anchor="@id/appBar"
-        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/shape_fab"
-        app:elevation="0dp">
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabfab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_favorite"
-        app:fabSize="normal"
-        app:backgroundTint="#00000000"
-        app:elevation="0dp"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/fabBottom"
         android:onClick="addFavorite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        app:layout_anchorGravity="bottom|end"
-        app:layout_anchor="@id/nestedScrollView"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/shape_fab"
-        app:elevation="0dp">
+        app:elevation="0dp"
+        app:layout_anchor="@id/detailsViewFrame"
+        app:layout_anchorGravity="bottom|end">
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fabfabBottom"
+            android:id="@+id/fabBottom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_favorite"
-            app:fabSize="normal"
             app:backgroundTint="#00000000"
-            app:elevation="0dp"/>
+            app:elevation="0dp"
+            app:fabSize="normal"/>
     </LinearLayout>
+
 </android.support.design.widget.CoordinatorLayout>
