--- a/app/src/main/res/layout/include_movie_detail.xml
+++ b/app/src/main/res/layout/include_movie_detail.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/detail"
-              android:layout_weight="1"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:layout_weight="1"
               android:orientation="vertical"
               android:paddingBottom="16dp"
               android:paddingEnd="16dp"
               android:paddingStart="32dp"
-              android:paddingTop="16dp"
-    >
+              android:paddingTop="16dp">
 
     <TextView
         android:id="@+id/movieTitleDetail"
@@ -92,35 +91,36 @@
     </GridLayout>
 
     <RelativeLayout
-        android:layout_gravity="center"
-        android:paddingStart="32dp"
-        android:paddingEnd="32dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    <Button
-        android:id="@+id/reviewsButton"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/ripple_button"
-        android:text="@string/reviews"
-        android:textSize="16sp"
-        android:textAllCaps="false"
-        android:textColor="@color/shapeColor"/>
+        android:layout_gravity="center"
+        android:paddingEnd="32dp"
+        android:paddingStart="32dp">
 
-    <Button
-        android:id="@+id/trailersButton"
-        android:layout_below="@+id/reviewsButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/ripple_button"
-        android:text="@string/trailers"
-        android:textSize="16sp"
-        android:layout_marginBottom="16dp"
-        android:textAllCaps="false"
-        android:textColor="@color/shapeColor"/>
-</RelativeLayout>
+        <Button
+            android:id="@+id/reviewsButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/ripple_button"
+            android:text="@string/reviews"
+            android:textAllCaps="false"
+            android:textColor="@color/shapeColor"
+            android:textSize="16sp"/>
+
+        <Button
+            android:id="@+id/trailersButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/reviewsButton"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/ripple_button"
+            android:text="@string/trailers"
+            android:textAllCaps="false"
+            android:textColor="@color/shapeColor"
+            android:textSize="16sp"/>
+    </RelativeLayout>
 
 
 </LinearLayout>
