--- a/app/src/main/res/layout/include_movie_detail.xml
+++ b/app/src/main/res/layout/include_movie_detail.xml
@@ -17,7 +17,7 @@
         android:gravity="center_horizontal"
         android:padding="16dp"
         android:textColor="@color/detailMovieText"
-        android:textSize="24sp"
+        android:textSize="@dimen/movieTitleDetail"
         android:textStyle="bold"
         />
 
@@ -29,7 +29,7 @@
         android:gravity="start"
         android:text="@string/overview"
         android:textColor="@color/detailMovieText"
-        android:textSize="14sp"
+        android:textSize="@dimen/detailText"
         android:textStyle="bold"/>
 
     <TextView
@@ -43,7 +43,7 @@
         android:gravity="start"
         android:maxLines="4"
         android:textColor="@color/detailMovieText"
-        android:textSize="14sp"/>
+        android:textSize="@dimen/detailText"/>
 
     <GridLayout
         android:layout_width="wrap_content"
@@ -59,7 +59,7 @@
             android:paddingEnd="5dp"
             android:text="@string/vote_average"
             android:textColor="@color/detailMovieText"
-            android:textSize="14sp"
+            android:textSize="@dimen/detailText"
             android:textStyle="bold"/>
 
         <TextView
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:gravity="start"
             android:textColor="@color/detailMovieText"
-            android:textSize="14sp"/>
+            android:textSize="@dimen/detailText"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -77,7 +77,7 @@
             android:paddingEnd="5dp"
             android:text="@string/release_date"
             android:textColor="@color/detailMovieText"
-            android:textSize="14sp"
+            android:textSize="@dimen/detailText"
             android:textStyle="bold"/>
 
         <TextView
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:gravity="start"
             android:textColor="@color/detailMovieText"
-            android:textSize="14sp"/>
+            android:textSize="@dimen/detailText"/>
 
     </GridLayout>
 
@@ -94,8 +94,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:paddingEnd="32dp"
-        android:paddingStart="32dp">
+        android:paddingEnd="@dimen/buttonPadding"
+        android:paddingStart="@dimen/buttonPadding">
 
         <Button
             android:id="@+id/reviewsButton"
@@ -107,7 +107,7 @@
             android:text="@string/reviews"
             android:textAllCaps="false"
             android:textColor="@color/shapeColor"
-            android:textSize="16sp"/>
+            android:textSize="@dimen/buttonTextSize"/>
 
         <Button
             android:id="@+id/trailersButton"
@@ -119,7 +119,7 @@
             android:text="@string/trailers"
             android:textAllCaps="false"
             android:textColor="@color/shapeColor"
-            android:textSize="16sp"/>
+            android:textSize="@dimen/buttonTextSize"/>
     </RelativeLayout>
 
 
