--- a/app/src/main/res/layout/row_detail_trailer.xml
+++ b/app/src/main/res/layout/row_detail_trailer.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/detailAuthor"
         android:textStyle="bold"
-        android:textSize="16sp"
+        android:textSize="@dimen/dialogAuthor"
         android:lines="1"
         android:ellipsize="end"
         android:textColor="@color/colorPrimary"
