--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="init_scroll_distance">600dp</dimen>
+    <dimen name="item_title">16sp</dimen>
+    <dimen name="movieTitleDetail">24sp</dimen>
+    <dimen name="detailText">14sp</dimen>
+    <dimen name="buttonTextSize">16sp</dimen>
+    <dimen name="buttonPadding">32dp</dimen>
+    //Dialog
+    <dimen name="dialogTitle">22dp</dimen>
+    <dimen name="dialogAuthor">18dp</dimen>
+    <dimen name="dialogDetailContent">16dp</dimen>
 </resources>
